Update the issue of width overflow

--- a/src/components/landingPage/LandingPage.module.css
+++ b/src/components/landingPage/LandingPage.module.css
@@ -1,12 +1,7 @@
 .main{
     background-image: url('../../assets/images/bg_back.png');
+    background-blend-mode: overlay;
     background-color: #181a20; 
     width: 100%;
 }
 
-
-@media (min-width:1800px){
-    .main{
-        padding-inline: 15%;
-    }
-}
