--- a/src/components/landingPage/hero/Hero.module.css
+++ b/src/components/landingPage/hero/Hero.module.css
@@ -111,6 +111,14 @@
 }
 
 @media (min-width:1800px){
+    .main{
+        margin-inline: 10%;
+    }
+
+    .right img{
+        max-width: 65rem;
+    }
+    
     .navBar img{
         width: 5rem;
     }
@@ -125,7 +133,7 @@
     }
 
     .body{
-        margin: 10rem;
+        margin: 10%;
     }
 
     .welcome{
